--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -178,7 +178,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>25</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -188,6 +188,7 @@
     <addaction name="actionNew"/>
     <addaction name="actionOpen_File"/>
     <addaction name="actionSave_File"/>
+    <addaction name="actionSave_As"/>
     <addaction name="actionExport"/>
    </widget>
    <addaction name="menuFile"/>
@@ -203,7 +204,7 @@
   </action>
   <action name="actionOpen_File">
    <property name="text">
-    <string>Open File</string>
+    <string>Open</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+O</string>
@@ -211,7 +212,7 @@
   </action>
   <action name="actionSave_File">
    <property name="text">
-    <string>Save File</string>
+    <string>Save</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
@@ -220,6 +221,14 @@
   <action name="actionExport">
    <property name="text">
     <string>Export</string>
+   </property>
+  </action>
+  <action name="actionSave_As">
+   <property name="text">
+    <string>Save As</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+S</string>
    </property>
   </action>
  </widget>
@@ -499,6 +508,38 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionSave_As</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>saveFileAs()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>299</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>MainWindow</sender>
+   <signal>modelReady(bool)</signal>
+   <receiver>actionSave_As</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>399</x>
+     <y>299</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <signal>modelReady(bool)</signal>
@@ -514,5 +555,6 @@
   <slot>exportData()</slot>
   <slot>onCellClicked(QModelIndex)</slot>
   <slot>onCustomContextMenuRequested(QPoint)</slot>
+  <slot>saveFileAs()</slot>
  </slots>
 </ui>
