--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -103,6 +103,23 @@
        </widget>
       </item>
       <item>
+       <widget class="QToolButton" name="toggleSubjectsButton">
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="resources/icons.qrc">
+          <normaloff>:/icons/toggle_whole_row.svg</normaloff>:/icons/toggle_whole_row.svg</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>30</width>
+          <height>30</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer_2">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -540,6 +557,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>toggleSubjectsButton</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>toggleSubjects()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>248</x>
+     <y>48</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>299</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <signal>modelReady(bool)</signal>
@@ -556,5 +589,6 @@
   <slot>onCellClicked(QModelIndex)</slot>
   <slot>onCustomContextMenuRequested(QPoint)</slot>
   <slot>saveFileAs()</slot>
+  <slot>toggleSubjects()</slot>
  </slots>
 </ui>
