--- a/resources/icons.qrc
+++ b/resources/icons.qrc
@@ -5,5 +5,6 @@
         <file>icons/edit_subjects.svg</file>
         <file>icons/remove_article.svg</file>
         <file>icons/sort_articles.svg</file>
+        <file>icons/toggle_whole_row.svg</file>
     </qresource>
 </RCC>
