--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -174,7 +174,7 @@
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>C_nu:</string>
+         <string>Связность:</string>
         </property>
        </widget>
       </item>
