--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -174,7 +174,7 @@
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
-         <string>C_nu:</string>
+         <string>Целостность:</string>
         </property>
        </widget>
       </item>
@@ -195,7 +195,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>20</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
